# FlappyBird

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/name/gost/flappypelican/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: sprite.fs  sprite.vs  text.fs  text.vs
app/src/main/assets/xmlSettings/: bottomColumn.xml  owl.xml  scene.xml  topColumn.xml  ui.xml
app/src/main/cpp/: Actor.cpp  Actor.h  ActorComponents.cpp  ActorComponents.h  ActorFactory.cpp  ActorFactory.h  Android.cpp  Android.h  EventManager.cpp  EventManager.h  Events.cpp  Events.h  FlappyEngine.cpp  FlappyEngine.h  GLContextWrapper.cpp  GLContextWrapper.h  GLState.cpp  GLState.h  GameTypes.h  Log.cpp  Log.h  LogWrapper.cpp  LogWrapper.h  Main.cpp  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneGame.cpp  SceneGame.h  SensorManager.cpp  SensorManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  StringUtils.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  (+9 more)
app/src/main/res/values/: strings.xml
app/src/test/java/com/name/gost/flappypelican/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
